* ext/zlib/zlib.c (rb_gzfile_s_wrap): add rdoc. [Bug #2656]   patched by Hugh Sasse [ruby-core:27692] [ruby-core:27852]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26429 b2dd03c8-39d4-4d8f-98ff-823fe69b080e